--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -14,6 +14,6 @@ jobs:
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build -t ramesh7752/githubactions .
+      run: docker build -t ramesh27/githubactions .
     - name: Build the Docker image
-      run: docker push ramesh7752/githubactions:latest
+      run: docker push ramesh27/githubactions:latest
